--- a/src/stylus/blocks/index/_how.styl
+++ b/src/stylus/blocks/index/_how.styl
@@ -70,6 +70,10 @@
 								color $text
 							& span
 								display block
+@media(max-width:1440px)
+	.how
+		&-line
+			display none
 @media(max-width:1360px)
 	.how
 		&-bg1
