--- a/src/css/blocks/common/_header.css
+++ b/src/css/blocks/common/_header.css
@@ -360,6 +360,279 @@
   background-color: $white;
   border-color: $green;
 }
+.popup {
+  position: fixed;
+  height: 100%;
+  right: 0;
+  top: -webkit-calc(50% - 200px);
+  top: calc(50% - 200px);
+  left: -webkit-calc(50% - 200px);
+  left: calc(50% - 200px);
+  z-index: -1;
+  background-color: $white;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 0;
+  width: 400px;
+  height: 455px;
+  visibility: hidden;
+}
+.popup-bg {
+  position: fixed;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  z-index: -1;
+  opacity: 0;
+  background-color: rgba(0,0,0,0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  right: 0;
+  bottom: 0;
+}
+.popup-bg-active {
+  z-index: 9999;
+  visibility: visible;
+  opacity: 1;
+}
+.popup-active {
+  z-index: 10000;
+  visibility: visible;
+  opacity: 1;
+}
+.popup__block {
+  height: 60px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__block-phone {
+  position: absolute;
+  left: 15px;
+  top: 10px;
+}
+.popup__block-phone a {
+  width: 40px;
+  height: 40px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  border: 1px solid $green;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__block-phone a svg path {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__block-phone a:hover svg path {
+  fill: $text;
+}
+.popup__block-phone a:hover {
+  border-color: $text;
+}
+.popup__block-close {
+  position: absolute;
+  right: 15px;
+  cursor: pointer;
+  top: 10px;
+  width: 40px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 40px;
+}
+.popup__block-close svg path {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__block-close:hover svg path {
+  fill: $green;
+}
+.popup__form {
+  padding: 0 30px;
+  height: -webkit-calc(100% - 60px);
+  height: calc(100% - 60px);
+}
+.popup__form-title {
+  margin-top: 20px;
+  text-align: center;
+  font-family: $Bold;
+  font-size: 1.25rem;
+  line-height: 20px;
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  margin-bottom: 30px;
+  color: $text;
+}
+.popup__form-form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+.popup__form-form-input {
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  margin-bottom: 20px;
+}
+.popup__form-form-input input {
+  border: 1px solid #dfdfdf;
+  -webkit-border-radius: 80px;
+          border-radius: 80px;
+  padding: 17px 20px;
+  color: #a7a7a7;
+  font-family: $Regular;
+  font-size: 1rem;
+  width: 100%;
+  line-height: 16px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__form-form-input input:hover,
+.popup__form-form-input input:focus {
+  border-color: $green;
+}
+.popup__form-form-policy {
+  margin-bottom: 32px;
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__form-form-policy span {
+  font-family: $Light;
+  font-size: 0.75rem;
+  text-align: center;
+  line-height: 16px;
+  color: $black;
+}
+.popup__form-form-policy span a {
+  color: $green;
+  display: block;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  border-bottom: 1px solid transparent;
+  padding-bottom: 2px;
+}
+.popup__form-form-policy span a:hover {
+  color: $black;
+  border-color: $black;
+}
+.popup__form-form-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__form-form-button button {
+  padding: 17px 40px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: $green;
+  -webkit-border-radius: 80px;
+          border-radius: 80px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  border: none;
+  border: 1px solid transparent;
+}
+.popup__form-form-button button span {
+  font-family: $Black;
+  color: $white;
+  font-size: 1rem;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  line-height: 16px;
+}
+.popup__form-form-button button svg {
+  margin-right: 10px;
+}
+.popup__form-form-button button svg path {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__form-form-button button:hover svg path {
+  fill: $green;
+}
+.popup__form-form-button button:hover span {
+  color: $green;
+}
+.popup__form-form-button button:hover {
+  background-color: $white;
+  border-color: $green;
+}
 @media (max-width: 1170px) {
   .header .header__container2-menu .menu__item {
     margin-right: 20px;
@@ -458,5 +731,13 @@
   }
   .headerMob__menu:hover svg rect {
     fill: $green;
+  }
+}
+@media (max-width: 414px) {
+  .popup {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
