--- a/src/css/style.css
+++ b/src/css/style.css
@@ -464,6 +464,279 @@ section {
   background-color: #fff;
   border-color: #74c361;
 }
+.popup {
+  position: fixed;
+  height: 100%;
+  right: 0;
+  top: -webkit-calc(50% - 200px);
+  top: calc(50% - 200px);
+  left: -webkit-calc(50% - 200px);
+  left: calc(50% - 200px);
+  z-index: -1;
+  background-color: #fff;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  opacity: 0;
+  width: 400px;
+  height: 455px;
+  visibility: hidden;
+}
+.popup-bg {
+  position: fixed;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  z-index: -1;
+  opacity: 0;
+  background-color: rgba(0,0,0,0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  right: 0;
+  bottom: 0;
+}
+.popup-bg-active {
+  z-index: 9999;
+  visibility: visible;
+  opacity: 1;
+}
+.popup-active {
+  z-index: 10000;
+  visibility: visible;
+  opacity: 1;
+}
+.popup__block {
+  height: 60px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__block-phone {
+  position: absolute;
+  left: 15px;
+  top: 10px;
+}
+.popup__block-phone a {
+  width: 40px;
+  height: 40px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  border: 1px solid #74c361;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__block-phone a svg path {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__block-phone a:hover svg path {
+  fill: #535353;
+}
+.popup__block-phone a:hover {
+  border-color: #535353;
+}
+.popup__block-close {
+  position: absolute;
+  right: 15px;
+  cursor: pointer;
+  top: 10px;
+  width: 40px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 40px;
+}
+.popup__block-close svg path {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__block-close:hover svg path {
+  fill: #74c361;
+}
+.popup__form {
+  padding: 0 30px;
+  height: -webkit-calc(100% - 60px);
+  height: calc(100% - 60px);
+}
+.popup__form-title {
+  margin-top: 20px;
+  text-align: center;
+  font-family: '700';
+  font-size: 1.25rem;
+  line-height: 20px;
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  margin-bottom: 30px;
+  color: #535353;
+}
+.popup__form-form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+.popup__form-form-input {
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  margin-bottom: 20px;
+}
+.popup__form-form-input input {
+  border: 1px solid #dfdfdf;
+  -webkit-border-radius: 80px;
+          border-radius: 80px;
+  padding: 17px 20px;
+  color: #a7a7a7;
+  font-family: '500';
+  font-size: 1rem;
+  width: 100%;
+  line-height: 16px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__form-form-input input:hover,
+.popup__form-form-input input:focus {
+  border-color: #74c361;
+}
+.popup__form-form-policy {
+  margin-bottom: 32px;
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__form-form-policy span {
+  font-family: '300';
+  font-size: 0.75rem;
+  text-align: center;
+  line-height: 16px;
+  color: #000;
+}
+.popup__form-form-policy span a {
+  color: #74c361;
+  display: block;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  border-bottom: 1px solid transparent;
+  padding-bottom: 2px;
+}
+.popup__form-form-policy span a:hover {
+  color: #000;
+  border-color: #000;
+}
+.popup__form-form-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.popup__form-form-button button {
+  padding: 17px 40px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #74c361;
+  -webkit-border-radius: 80px;
+          border-radius: 80px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  border: none;
+  border: 1px solid transparent;
+}
+.popup__form-form-button button span {
+  font-family: '900';
+  color: #fff;
+  font-size: 1rem;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  line-height: 16px;
+}
+.popup__form-form-button button svg {
+  margin-right: 10px;
+}
+.popup__form-form-button button svg path {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.popup__form-form-button button:hover svg path {
+  fill: #74c361;
+}
+.popup__form-form-button button:hover span {
+  color: #74c361;
+}
+.popup__form-form-button button:hover {
+  background-color: #fff;
+  border-color: #74c361;
+}
 @media (max-width: 1170px) {
   .header .header__container2-menu .menu__item {
     margin-right: 20px;
@@ -562,6 +835,14 @@ section {
   }
   .headerMob__menu:hover svg rect {
     fill: #74c361;
+  }
+}
+@media (max-width: 414px) {
+  .popup {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 .footer {
@@ -2032,6 +2313,11 @@ section {
 .how__container-items-item .how__title span a span {
   display: block;
 }
+@media (max-width: 1440px) {
+  .how-line {
+    display: none;
+  }
+}
 @media (max-width: 1360px) {
   .how-bg1 {
     right: auto;
@@ -2207,10 +2493,9 @@ section {
 }
 .diet__container-form .diet__input {
   margin-bottom: 40px;
-  -webkit-flex-basis: -webkit-calc(21% - 20px);
-      -ms-flex-preferred-size: calc(21% - 20px);
-          flex-basis: calc(21% - 20px);
+  height: 113.2px;
   position: relative;
+  width: 219.4px;
   margin-right: 20px;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
@@ -2218,6 +2503,9 @@ section {
   cursor: pointer;
   -webkit-box-shadow: 0px 20px 30px rgba(0,0,0,0.1);
           box-shadow: 0px 20px 30px rgba(0,0,0,0.1);
+}
+.diet__container-form .diet__input-active.diet__input label {
+  border-color: #fff;
 }
 .diet__container-form .diet__input:nth-child(1) {
   background-color: #a3de5b;
@@ -2299,7 +2587,9 @@ section {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
+  position: absolute;
+  top: 0;
+  width: 100%;
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
@@ -2312,7 +2602,6 @@ section {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
-  padding: 11px;
 }
 .diet__container-form label:hover {
   border-color: #fff;
@@ -2322,33 +2611,31 @@ section {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 45px;
-  overflow-x: scroll;
+  margin-bottom: 10px;
+  padding-bottom: 35px;
 }
 .diet__container-form .diet__type {
-  min-width: 173px;
+  min-width: 140px;
   height: 60px;
-  margin-right: 20px;
+  margin-right: 26.5px;
   background-color: #fff;
   -webkit-border-radius: 80px;
           border-radius: 80px;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  position: relative;
 }
-.diet__container-form .diet__type:hover {
-  background-color: #74c361;
-  -webkit-box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
-          box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
-}
-.diet__container-form .diet__type:hover label span {
-  color: #fff;
-}
-.diet__container-form .diet__type:nth-child(11) {
+.diet__container-form .diet__type:nth-child(12) {
   margin-right: 0;
 }
 .diet__container-form .diet__type label {
   cursor: pointer;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2362,29 +2649,49 @@ section {
       -ms-flex-pack: center;
           justify-content: center;
   border: none;
-}
-.diet__container-form .diet__type label span {
-  -webkit-flex-basis: 100%;
-      -ms-flex-preferred-size: 100%;
-          flex-basis: 100%;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 2;
   text-align: center;
   font-family: '700';
   font-size: 1.125rem;
-  line-height: 23px;
+  line-height: 20px;
   color: #313131;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+}
+.diet__container-form .diet__type label:hover {
+  color: #74c361;
+}
+.diet__container-form .diet__type-active {
+  background-color: #74c361;
+  -webkit-box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+          box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+}
+.diet__container-form .diet__type-active label {
+  color: #fff;
+}
+.diet__container-form .diet__type-active:hover label {
+  color: #fff;
+}
+.diet__container-form .diet__type-hovered {
+  -webkit-box-shadow: 0px 15px 25px #74d75f;
+          box-shadow: 0px 15px 25px #74d75f;
 }
 .diet__container-form .diet__blocks {
   -webkit-flex-basis: 100%;
       -ms-flex-preferred-size: 100%;
           flex-basis: 100%;
   display: grid;
-  grid-template-columns: repeat(1fr, 5);
+  grid-template-columns: repeat(5, 1fr);
   overflow: hidden;
 }
 .diet__container-form .diet__blocks-block {
+  -webkit-align-content: flex-start;
+      -ms-flex-line-pack: start;
+          align-content: flex-start;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2399,40 +2706,47 @@ section {
   grid-row: 1/2;
 }
 .diet__container-form .diet__blocks-block:nth-child(2) {
-  grid-column: 1/3;
+  grid-column: 1/4;
   grid-row: 2/3;
 }
 .diet__container-form .diet__blocks-block:nth-child(3) {
-  grid-column: 3/6;
+  grid-column: 4/6;
   grid-row: 1/3;
+  -webkit-align-content: flex-end;
+      -ms-flex-line-pack: end;
+          align-content: flex-end;
+}
+.diet__container-form .diet__blocks-block:nth-child(3) .swiper-container {
+  height: 100%;
 }
 .diet__container-form .diet__blocks-block__types {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 34px;
+  margin-bottom: 19px;
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
 }
 .diet__container-form .diet__blocks-block__type {
-  width: 173px;
-  height: 60px;
+  width: 105px;
+  height: 35px;
   margin-right: 20px;
   background-color: #fff;
   -webkit-border-radius: 80px;
           border-radius: 80px;
+  margin-bottom: 15px;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  display: none;
+  position: relative;
 }
-.diet__container-form .diet__blocks-block__type:hover {
-  background-color: #74c361;
-  -webkit-box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
-          box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+.diet__container-form .diet__blocks-block__type-active {
+  display: block;
 }
-.diet__container-form .diet__blocks-block__type:hover label span {
-  color: #fff;
-}
-.diet__container-form .diet__blocks-block__type:nth-child(11) {
+.diet__container-form .diet__blocks-block__type:nth-child(5) {
   margin-right: 0;
 }
 .diet__container-form .diet__blocks-block__type label {
@@ -2451,6 +2765,9 @@ section {
           justify-content: center;
   border: none;
   padding: 6px;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 .diet__container-form .diet__blocks-block__type label span {
   -webkit-flex-basis: 100%;
@@ -2458,12 +2775,28 @@ section {
           flex-basis: 100%;
   text-align: center;
   font-family: '700';
-  font-size: 1.125rem;
+  font-size: 0.825rem;
   line-height: 23px;
   color: #313131;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+}
+.diet__container-form .diet__blocks-block__type-hovered {
+  background-color: #74c361;
+  -webkit-box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+          box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+}
+.diet__container-form .diet__blocks-block__type-hovered label span {
+  color: #fff;
+}
+.diet__container-form .diet__blocks-block__type:hover {
+  background-color: #74c361;
+  -webkit-box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+          box-shadow: 0px 15px 25px rgba(156,217,143,0.4);
+}
+.diet__container-form .diet__blocks-block__type:hover label span {
+  color: #fff;
 }
 .diet__container-form .diet__blocks-block-title {
   -webkit-flex-basis: 100%;
@@ -2738,13 +3071,13 @@ section {
 }
 .diet__container-form .diet__blocks-block:nth-child(3) .swiper-button-next,
 .diet__container-form .diet__blocks-block:nth-child(3) .swiper-button-prev {
-  top: 65px;
+  top: 40px;
 }
 .diet__container-form .diet__blocks-block:nth-child(3) .swiper-button-prev {
-  left: 50px;
+  left: 20px;
 }
 .diet__container-form .diet__blocks-block:nth-child(3) .swiper-button-next {
-  right: 50px;
+  right: 20px;
 }
 .diet__container-form .diet__blocks-block-img {
   margin-top: 14%;
@@ -2770,13 +3103,38 @@ section {
   width: 100%;
   text-align: center;
   left: 0;
-  top: 55px;
-  font-size: 2rem;
+  top: 30px;
+  font-size: 1.5rem;
   line-height: 32px;
   color: #fff;
   font-family: '900';
 }
+.diet__container-form .diet__blocks-block-desc {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  left: 0;
+  top: 70px;
+  font-size: 1rem;
+  line-height: 32px;
+  color: #fff;
+  font-family: '900';
+}
+@media (max-width: 1440px) {
+  .diet-line {
+    display: none;
+  }
+  .diet__container-form .diet__blocks-block-text {
+    min-height: 212px;
+  }
+}
 @media (max-width: 1170px) {
+  .diet__container-form .diet__types {
+    overflow-x: scroll;
+  }
+  .diet__container-form .diet__blocks-block-text {
+    min-height: auto;
+  }
   .diet__container-form .diet__blocks-block:nth-child(1) {
     grid-column: 1/6;
     grid-row: 1/2;
@@ -2853,11 +3211,9 @@ section {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    margin-bottom: 40px;
     overflow-x: scroll;
   }
   .diet__container-form .diet__inputs .diet__input {
-    margin-bottom: 0;
     min-width: 200px;
   }
 }
@@ -2905,6 +3261,17 @@ section {
     -webkit-order: 2;
         -ms-flex-order: 2;
             order: 2;
+  }
+}
+@media (max-width: 660px) {
+  .diet__container-form .diet__blocks-block__types {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
   }
 }
 @media (max-width: 500px) {
@@ -3292,7 +3659,7 @@ section {
 .help-block {
   position: absolute;
   left: 0;
-  top: -117px;
+  bottom: -5px;
   z-index: 7;
 }
 .help-bg:after {
@@ -3424,6 +3791,14 @@ section {
 }
 .help__container-block-button:hover a {
   color: #535353;
+}
+@media (max-width: 1440px) {
+  .help-line {
+    display: none;
+  }
+  .help-line2 {
+    display: none;
+  }
 }
 @media (max-width: 1360px) {
   .help-block {
@@ -4139,7 +4514,7 @@ section {
   color: #fff;
 }
 .success-active {
-  z-index: 9999;
+  z-index: 100001;
   opacity: 1;
 }
 @media (max-width: 1170px) {
