--- a/src/pug/blocks/index/diet.pug
+++ b/src/pug/blocks/index/diet.pug
@@ -13,8 +13,8 @@
 			form(action="#").diet__container-form
 				.diet__container-form-title Ваша цель
 				.diet__inputs
-					.diet__input
-						input(type="radio" name="target" id="target1" value="Похудеть")
+					.diet__input.diet__input-active
+						input(type="radio" name="target" id="target1" value="Похудеть" checked)
 						label(for="target1")
 							.diet__input-bg
 							.diet__input-title Похудеть
@@ -39,87 +39,124 @@
 								img(src="/images/diet-img3.png")
 				.diet__container-form-title Выберите тип рациона
 				.diet__types
-					.diet__type
-						input(type="radio" name="type" id="type1" value="Снижение")
-						label(for="type1")
+					.diet__type.diet__type-active.diet__type-hovered
+						input(type="radio" name="diet" id="diet1" value="Снижение" checked)
+						label(for="diet1")
 							img(src="/images/chart-with-downwards-trend_1f4c9.png")
 							span Снижение
 					.diet__type
-						input(type="radio" name="type" id="type2" value="Детокс")
-						label(for="type2")
+						input(type="radio" name="diet" id="diet2" value="Баланс")
+						label(for="diet2")
+							img(src="/images/person-in-lotus-position_1f9d8.png")
+							span Баланс
+					.diet__type.diet__type-active
+						input(type="radio" name="diet" id="diet3" value="Детокс")
+						label(for="diet3")
 							img(src="/images/leafy-green_1f96c.png")
 							span Детокс
 					.diet__type
-						input(type="radio" name="type" id="type3" value="Баланс")
-						label(for="type3")
-							img(src="/images/person-in-lotus-position_1f9d8.png")
-							span Баланс
+						input(type="radio" name="diet" id="diet4" value="Без рыбы")
+						label(for="diet4")
+							img(src="/images/nofish.png")
+							span Без рыбы
 					.diet__type
-						input(type="radio" name="type" id="type4" value="Веган")
-						label(for="type4")
-							img(src="/images/broccoli_1f966.png")
-							span Веган
+						input(type="radio" name="diet" id="diet5" value="Без мяса")
+						label(for="diet5")
+							img(src="/images/nomeat.png")
+							span Без мяса
 					.diet__type
-						input(type="radio" name="type" id="type5" value="Постное")
-						label(for="type5")
-							img(src="/images/green-salad_1f957.png")
-							span Постное
-					.diet__type
-						input(type="radio" name="type" id="type6" value="Без лактозы")
-						label(for="type6")
+						input(type="radio" name="diet" id="diet6" value="Без лактозы")
+						label(for="diet6")
 							img(src="/images/glass-of-milk_1f95b.png")
 							span Без лактозы
+					.diet__type
+						input(type="radio" name="diet" id="diet7" value="Веган")
+						label(for="diet7")
+							img(src="/images/broccoli_1f966.png")
+							span Веган
 				.diet__blocks
 					.diet__blocks-block
-						.diet__blocks-block-title Выберите тип рациона
+						.diet__blocks-block-title Количество калорий
 						.diet__blocks-block__types
-							.diet__blocks-block__type
-								input(type="radio" name="count" id="count1" value="1000 ккал")
+							.diet__blocks-block__type.diet__blocks-block__type-active.diet__blocks-block__type-hovered
+								input(type="radio" name="count" id="count1" value="1000 ккал" checked)
 								label(for="count1")
 									span 1000 ккал
-							.diet__blocks-block__type
-								input(type="radio" name="count" id="count2" value="1500 ккал")
+							.diet__blocks-block__type.diet__blocks-block__type-active
+								input(type="radio" name="count" id="count2" value="kk ккал")
 								label(for="count2")
+									span 1200 ккал
+							.diet__blocks-block__type.diet__blocks-block__type-active
+								input(type="radio" name="count" id="count3" value="1500 ккал")
+								label(for="count3")
 									span 1500 ккал
+							.diet__blocks-block__type
+								input(type="radio" name="count" id="count4" value="1800 ккал")
+								label(for="count4")
+									span 1800 ккал
+							.diet__blocks-block__type
+								input(type="radio" name="count" id="count5" value="2100 ккал")
+								label(for="count5")
+									span 2100 ккал
 					.diet__blocks-block
 						.diet__blocks-block-text
-							p Программа состоит из блюд с равным соотношением белков и углеводов и оптимальным количеством жиров. Такое сочетание позволяет поддерживать текущий вес, улучшить состояние здоровья и самочувствие, нормализовать обмен веществ и наделить организм ценными витаминами и элементами.
+							p#text Программа подойдет для тех, кто хочет сбросить лишний вес быстро, при этом оставаться сытым. В рационе повышенное содержание белковой пищи, которая помогает нормализовать пищевое поведение, ускоряет обмен веществ и сохраняет мышечную ткань. Рацион рассчитан на 5 приемов пищи из 6-ти блюд.
 							p В программе
 								strong 5 приемов пищи.
 						.diet__blocks-block-stats
 							.diet__blocks-block-stats-stat
 								.diet__blocks-block-stats-stat-item
-									span 123
+									span#protein 440
 								.diet__blocks-block-stats-stat-text Белки
 							.diet__blocks-block-stats-stat
 								.diet__blocks-block-stats-stat-item
-									span 40
+									span#fat 123
 								.diet__blocks-block-stats-stat-text Жиры
 							.diet__blocks-block-stats-stat
 								.diet__blocks-block-stats-stat-item
-									span 189
+									span#carbohydrates 189
 								.diet__blocks-block-stats-stat-text Углеводы
 						.diet__blocks-block-footer
 							.diet__blocks-block-footer-button
 								button(type="submit") Хочу рацион
 							.diet__blocks-block-footer-totals
-								span 5
+								span 6
 								span блюд от
-								span 708
+								span#price 237
 								span руб./день
 					.diet__blocks-block
-						.diet__blocks-block-bigtitle Обед
 						.swiper-container.swiper-container-diet
 							.swiper-wrapper
 								.swiper-slide
+									.diet__blocks-block-bigtitle Завтрак
+									.diet__blocks-block-desc Рисовая каша с финиками
 									.diet__blocks-block-img
 										img(src="/images/product.png")
 								.swiper-slide
+									.diet__blocks-block-bigtitle Второй завтрак
+									.diet__blocks-block-desc Гречка с йогуртом
 									.diet__blocks-block-img
 										img(src="/images/product2.png")
 								.swiper-slide
+									.diet__blocks-block-bigtitle Обед (первое блюдо)
+									.diet__blocks-block-desc С-т из марин. свеклы с горошком
 									.diet__blocks-block-img
 										img(src="/images/product3.png")
+								.swiper-slide
+									.diet__blocks-block-bigtitle Обед (второе блюдо)
+									.diet__blocks-block-desc Плов из индейки с киноа
+									.diet__blocks-block-img
+										img(src="/images/product2.png")
+								.swiper-slide
+									.diet__blocks-block-bigtitle Полдник
+									.diet__blocks-block-desc Творог с личи
+									.diet__blocks-block-img
+										img(src="/images/product.png")
+								.swiper-slide
+									.diet__blocks-block-bigtitle Ужин
+									.diet__blocks-block-desc Лемонема с кабачково икрой
+									.diet__blocks-block-img
+										img(src="/images/product2.png")
 							.swiper-button-prev
 								<svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.217797 10.9193L7.64081 19.496C7.93 19.8301 8.40039 19.8301 8.69078 19.496C8.97998 19.1604 8.97998 18.617 8.69078 18.2828L2.52774 11.1633L23.2572 11.1633C23.6676 11.1633 24 10.7792 24 10.305C24 9.83087 23.6676 9.44682 23.2572 9.44682L2.54214 9.44682L8.69078 2.34253C8.97998 2.00839 8.97998 1.4649 8.69078 1.12937C8.54439 0.962992 8.35479 0.878418 8.1652 0.878418C7.9756 0.878418 7.78481 0.962992 7.64081 1.12937L0.217797 9.70609C-0.0725949 10.0416 -0.0725949 10.5837 0.217797 10.9193Z" fill="#74C361"/></svg>
 							.swiper-button-next
