--- a/src/stylus/blocks/common/_header.styl
+++ b/src/stylus/blocks/common/_header.styl
@@ -202,6 +202,160 @@
 				&:hover
 					background-color $white
 					border-color $green
+.popup
+	position fixed
+	height 100%
+	right 0
+	top calc(50% - 200px)
+	left calc(50% - 200px)
+	z-index -1
+	background-color $white
+	transition .3s
+	opacity 0
+	width 400px
+	height 455px
+	visibility hidden
+	&-bg
+		position fixed
+		transition .3s
+		z-index -1
+		opacity 0
+		background-color rgba(0,0,0,.6)
+		top 0
+		left 0
+		width 100%
+		height 100%
+		right 0
+		bottom 0
+		&-active
+			z-index 9999
+			visibility visible
+			opacity 1
+	&-active
+		z-index 10000
+		visibility visible
+		opacity 1
+	&__block
+		height 60px
+		display flex
+		align-items center
+		justify-content center
+		&-phone
+			position absolute
+			left 15px
+			top 10px
+			& a
+				width 40px
+				height 40px
+				border-radius 50%
+				border 1px solid $green
+				display flex
+				align-items center
+				transition .3s
+				justify-content center
+				& svg path
+					transition .3s
+				&:hover svg path
+					fill $text
+				&:hover
+					border-color $text
+		&-close
+			position absolute
+			right 15px
+			cursor pointer
+			top 10px
+			width 40px
+			display flex
+			align-items center
+			justify-content center
+			height 40px
+			& svg path
+				transition .3s
+			&:hover svg path
+				fill $green
+	&__form
+		padding 0 30px
+		height calc(100% - 60px)
+		&-title
+			margin-top 20px
+			text-align center
+			font-family $Bold
+			font-size 1.25rem
+			line-height 20px
+			flex-basis 100%
+			margin-bottom 30px
+			color $text
+		&-form
+			display flex
+			align-items center
+			justify-content center
+			flex-wrap wrap
+			&-input
+				flex-basis 100%
+				margin-bottom 20px
+				& input
+					border 1px solid #DFDFDF
+					border-radius 80px
+					padding 17px 20px
+					color #a7a7a7
+					font-family $Regular
+					font-size 1rem
+					width 100%
+					line-height 16px
+					transition .3s
+					&:hover,
+					&:focus
+						border-color $green
+			&-policy
+				margin-bottom 32px
+				flex-basis 100%
+				display flex
+				justify-content center
+				& span
+					font-family $Light
+					font-size 0.75rem
+					text-align center
+					line-height 16px
+					color $black
+					& a
+						color $green
+						display block
+						transition .3s
+						border-bottom 1px solid transparent
+						padding-bottom 2px
+						&:hover
+							color $black
+							border-color $black
+			&-button
+				display flex
+				justify-content center
+				& button
+					padding 17px 40px
+					align-items center
+					display flex
+					background-color $green
+					border-radius 80px
+					cursor pointer
+					transition .3s
+					border none
+					border 1px solid transparent
+					& span
+						font-family $Black
+						color $white
+						font-size 1rem
+						transition .3s
+						line-height 16px
+					& svg
+						margin-right 10px
+					& svg path
+						transition .3s
+					&:hover svg path
+						fill $green
+					&:hover span
+						color $green
+					&:hover
+						background-color $white
+						border-color $green
 @media(max-width:1170px)
 	.header
 		.header
@@ -258,3 +412,9 @@
 				transition .3s
 			&:hover svg rect
 				fill $green
+@media(max-width: 414px)
+	.popup
+		top 0
+		left 0
+		width 100%
+		height 100%
