--- a/src/stylus/blocks/index/_diet.styl
+++ b/src/stylus/blocks/index/_diet.styl
@@ -69,12 +69,15 @@
 				display flex
 			.diet__input
 				margin-bottom 40px
-				flex-basis calc(21% - 20px)
+				height 113.2px
 				position relative
+				width 219.4px
 				margin-right 20px
 				transition .3s
 				cursor pointer
 				box-shadow 0px 20px 30px rgba(0, 0, 0, 0.1)
+				&-active.diet__input label
+					border-color $white
 				&:nth-child(1)
 					background-color #A3DE5B
 				&:nth-child(2)
@@ -131,54 +134,66 @@
 				cursor pointer
 				display flex
 				justify-content space-between
-				position relative
+				position absolute
+				top 0
+				width 100%
 				flex-wrap wrap
 				align-items center
 				height 100%
 				border 5px solid transparent
 				transition .3s
-				padding 11px
 				&:hover
 					border-color $white
 			.diet__types
 				display flex
-				margin-bottom 45px
-				overflow-x scroll
+				margin-bottom 10px
+				padding-bottom 35px
 			.diet__type
-				min-width 173px
+				min-width 140px
 				height 60px
-				margin-right 20px
+				margin-right 26.5px
 				background-color $white
 				border-radius 80px
 				transition .3s
-				&:hover
-					background-color $green
-					box-shadow 0px 15px 25px rgba(156, 217, 143, 0.4)
-					& label
-						& span
-							color $white
-				&:nth-child(11)
+				position relative
+				&:nth-child(12)
 					margin-right 0
 				& label
 					cursor pointer
+					flex-direction column
 					display flex
 					align-items center
 					justify-content center
 					border none
-					& span
-						flex-basis 100%
-						text-align center
-						font-family $Bold
-						font-size 1.125rem
-						line-height 23px
-						color #313131
-						transition .3s
+					position absolute
+					top 0
+					width 100%
+					z-index 2
+					text-align center
+					font-family $Bold
+					font-size 1.125rem
+					line-height 20px
+					color #313131
+					transition .3s
+					&:hover
+						color $green
+				&-active
+					background-color $green
+					box-shadow 0px 15px 25px rgba(156, 217, 143, 0.4)
+					& label
+						color $white
+					&:hover
+						& label
+							color $white
+				&-hovered
+					box-shadow 0px 15px 25px rgb(116, 215, 95)
 			.diet__blocks
 				flex-basis 100%
 				display grid
-				grid-template-columns repeat(1fr, 5)
+				grid-template-columns repeat(5, 1fr)
 				overflow hidden
 				&-block
+					align-content flex-start
 					display flex
 					flex-wrap wrap
 					position relative
@@ -186,28 +201,31 @@
 						grid-column 1 / 3
 						grid-row 1 / 2
 					&:nth-child(2)
-						grid-column 1 / 3
+						grid-column 1 / 4
 						grid-row 2 / 3
 					&:nth-child(3)
-						grid-column 3 / 6
+						grid-column 4 / 6
 						grid-row 1 / 3
+						align-content flex-end
+						.swiper-container
+							height 100%
 					&__types
 						display flex
-						margin-bottom 34px
+						margin-bottom 19px
+						flex-basis 100%
 					&__type
-						width 173px
-						height 60px
+						width 105px
+						height 35px
 						margin-right 20px
 						background-color $white
 						border-radius 80px
+						margin-bottom 15px
 						transition .3s
-						&:hover
-							background-color $green
-							box-shadow 0px 15px 25px rgba(156, 217, 143, 0.4)
-							& label
-								& span
-									color $white
-						&:nth-child(11)
+						display none
+						position relative
+						&-active
+							display block
+						&:nth-child(5)
 							margin-right 0
 						& label
 							cursor pointer
@@ -216,14 +234,29 @@
 							justify-content center
 							border none
 							padding 6px
+							position absolute
+							top 0
+							width 100%
 							& span
 								flex-basis 100%
 								text-align center
 								font-family $Bold
-								font-size 1.125rem
+								font-size 0.825rem
 								line-height 23px
 								color #313131
 								transition .3s
+						&-hovered
+							background-color $green
+							box-shadow 0px 15px 25px rgba(156, 217, 143, 0.4)
+							& label
+								& span
+									color $white
+						&:hover
+							background-color $green
+							box-shadow 0px 15px 25px rgba(156, 217, 143, 0.4)
+							& label
+								& span
+									color $white
 					&-title
 						flex-basis 100%
 						font-family $Black
@@ -390,11 +423,11 @@
 									opacity 0.5
 						.swiper-button-next,
 						.swiper-button-prev
-							top 65px
+							top 40px
 						.swiper-button-prev
-							left 50px
+							left 20px
 						.swiper-button-next
-							right 50px
+							right 20px
 					&-img
 						margin-top 14%
 						height 100%
@@ -408,17 +441,41 @@
 						width 100%
 						text-align center
 						left 0
-						top 55px
-						font-size 2rem
+						top 30px
+						font-size 1.5rem
 						line-height 32px
 						color $white
 						font-family $Black
-@media(max-width:1170px)
+					&-desc
+						position absolute
+						width 100%
+						text-align center
+						left 0
+						top 70px
+						font-size 1rem
+						line-height 32px
+						color $white
+						font-family $Black
+@media(max-width:1440px)
 	.diet
+		&-line
+			display none
 		&__container
 			&-form
 				.diet__blocks
 					&-block
+						&-text
+							min-height 212px
+@media(max-width:1170px)
+	.diet
+		&__container
+			&-form
+				.diet__types
+					overflow-x scroll
+				.diet__blocks
+					&-block
+						&-text
+							min-height auto
 						&:nth-child(1)
 							grid-column 1 / 6
 							grid-row 1 / 2
@@ -459,10 +516,8 @@
 			&-form
 				.diet__inputs
 					display flex
-					margin-bottom 40px
 					overflow-x scroll
 					.diet__input
-						margin-bottom 0
 						min-width 200px
 @media(max-width:767px)
 	.diet
@@ -489,6 +544,15 @@
 							&-button
 								flex-basis 100%
 								order 2
+@media(max-width:660px)
+	.diet
+		&__container
+			&-form
+				.diet__blocks
+					&-block
+						&__types
+							justify-content flex-start
+							flex-wrap wrap
 @media(max-width:500px)
 	.diet
 		&__container
