--- a/src/pug/blocks/index/reviews.pug
+++ b/src/pug/blocks/index/reviews.pug
@@ -15,29 +15,13 @@
 							.reviews__container-slider-slide
 								.slide__photos
 									.slide__photos-item
-										img(src="/images/photo1.jpg")
-										span До
-									.slide__photos-item
-										img(src="/images/photo2.jpg")
-										span После
-									.slide__photos-info
-										span -14 кг
-										a(href="#SectionDiet") Хочу так же
-								.slide__content
-									.slide__content-title Афанасий
-									.slide__content-age 24 года
-									.slide__content-text Я не люблю готовить от слова совсем. Но ежедневные заказы доставок пиццы, роллов и воков уже поднадоели. Biofit закрыл мою потребность ежедневно думать над тем, что бы съесть к ужину. Делаешь покупку раз в неделю и оставшиеся дни голова не болит. Понравилось разнообразное меню и доступная цена. Для сравнения - выходит в 3 раза дешевле, чем питаться на доставках.
-						.swiper-slide
-							.reviews__container-slider-slide
-								.slide__photos
-									.slide__photos-item
 										img(src="/images/photo3.jpg")
 										span До
 									.slide__photos-item
 										img(src="/images/photo4.jpg")
 										span После
 									.slide__photos-info
-										span -25 кг
+										span -14 кг
 										a(href="#SectionDiet") Хочу так же
 								.slide__content
 									.slide__content-title Елена
@@ -69,9 +53,25 @@
 										img(src="/images/photo8.jpg")
 										span После
 									.slide__photos-info
-										span -10 кг
+										span -15 кг
 										a(href="#SectionDiet") Хочу так же
 								.slide__content
 									.slide__content-title Карина
 									.slide__content-age 29 лет
 									.slide__content-text Порой после рабочего дня очень сложно найти силы на приготовление ужина, что уж говорить про завтраки и обеды. До поры до времени спасалась доставками фастфуда, а потом обнаружила лишнюю складку на животе.. Расстроилась, и только в тот момент взяла под контроль свое питание. Спасибо вам за Biofit - это настоящая палочка-выручалочка в рабочих буднях!
+						.swiper-slide
+							.reviews__container-slider-slide
+								.slide__photos
+									.slide__photos-item
+										img(src="/images/photo1.jpg")
+										span До
+									.slide__photos-item
+										img(src="/images/photo2.jpg")
+										span После
+									.slide__photos-info
+										span -13 кг
+										a(href="#SectionDiet") Хочу так же
+								.slide__content
+									.slide__content-title Афанасий
+									.slide__content-age 30 лет
+									.slide__content-text Я не люблю готовить от слова совсем. Но ежедневные заказы доставок пиццы, роллов и воков уже поднадоели. Biofit закрыл мою потребность ежедневно думать над тем, что бы съесть к ужину. Делаешь покупку раз в неделю и оставшиеся дни голова не болит. Понравилось разнообразное меню и доступная цена. Для сравнения - выходит в 3 раза дешевле, чем питаться на доставках.
