--- a/src/pug/blocks/common/header.pug
+++ b/src/pug/blocks/common/header.pug
@@ -12,16 +12,15 @@
 				.container__block
 					span Заказать звонок
 		.header__container2
-			a(href="/").header__container2-logo
-				img(src="/images/logo.png")
-			.header__container2-desc Сервис доставки здорового питания
+			.header__container2-cont
+				a(href="/").header__container2-logo
+					img(src="/images/logo.png")
+				.header__container2-desc Сервис доставки здорового питания
 			.header__container2-menu
 				.menu__item
 					a(href="#SectionHow") Как это работает?
 				.menu__item
 					a(href="#SectionDiet") Подбор рациона
-				.menu__item
-					a(href="#SectionReviews") Пройти оценку тела
 				.menu__item
 					a(href="#SectionFaq") Доставка и оплата
 				.menu__item
@@ -48,7 +47,6 @@
 		.mobMenu__menu-items
 			a(href="#SectionHow").mobMenu__menu-items-item Как это работает?
 			a(href="#SectionDiet").mobMenu__menu-items-item Подбор рациона
-			a(href="#SectionReviews").mobMenu__menu-items-item Пройти оценку тела
 			a(href="#SectionFaq").mobMenu__menu-items-item Доставка и оплата
 			a(href="#SectionFaq").mobMenu__menu-items-item FAQ
 		.mobMenu__menu-button
