--- a/src/pug/blocks/index/price.pug
+++ b/src/pug/blocks/index/price.pug
@@ -31,6 +31,9 @@
 										span.salePrice 70
 											div руб.
 										span экономия
+								.price-footer
+									span Попробуйте сами
+									img(src="/images/smile.png")
 						.swiper-slide
 							.price__container-slider-slide
 								.price-content
@@ -44,9 +47,6 @@
 										span руб.
 									.price-content-button
 										span Хочу сейчас
-								.price-footer
-									span Попробуйте сами
-									img(src="/images/smile.png")
 						.swiper-slide
 							.price__container-slider-slide
 								.price-content
@@ -88,5 +88,5 @@
 											div руб.
 										span экономия
 								.price-footer
-									span Попробуйте сами
+									span Лучший выбор
 									img(src="/images/thumbsup.png")
