--- a/src/css/blocks/common/_header.css
+++ b/src/css/blocks/common/_header.css
@@ -106,20 +106,41 @@
       -ms-flex-preferred-size: 15%;
           flex-basis: 15%;
 }
+.header .header__container2-cont {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-basis: 25%;
+      -ms-flex-preferred-size: 25%;
+          flex-basis: 25%;
+}
 .header .header__container2-desc {
   font-size: 0.825rem;
   line-height: 18px;
   font-family: $Light;
   color: $text;
   position: relative;
-  -webkit-flex-basis: 15%;
-      -ms-flex-preferred-size: 15%;
-          flex-basis: 15%;
+  -webkit-flex-basis: 45%;
+      -ms-flex-preferred-size: 45%;
+          flex-basis: 45%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .header .header__container2-desc:after {
   content: '';
   position: absolute;
-  bottom: 0px;
+  bottom: 20px;
   background-color: rgba(116,195,97,0.2);
   height: 6px;
   width: 120px;
@@ -634,6 +655,11 @@
   border-color: $green;
 }
 @media (max-width: 1170px) {
+  .header .header__container2-cont {
+    -webkit-flex-basis: 35%;
+        -ms-flex-preferred-size: 35%;
+            flex-basis: 35%;
+  }
   .header .header__container2-menu .menu__item {
     margin-right: 20px;
   }
