--- a/src/css/blocks/index/_price.css
+++ b/src/css/blocks/index/_price.css
@@ -79,8 +79,12 @@
 .price__container-slider .swiper-container {
   overflow: visible;
 }
-.price__container-slider .swiper-slide:nth-child(4) .price__container-slider-slide .price-footer {
-  background: $green;
+.price__container-slider .swiper-slide:nth-child(1) .price__container-slider-slide .price-footer {
+  background-color: #69a6df;
+}
+.price__container-slider .swiper-slide:nth-child(1) .price__container-slider-slide .price-footer:before {
+  border-right: 10px solid #69a6df;
+  border-bottom: 10px solid #69a6df;
 }
 .price__container-slider .swiper-slide:nth-child(4) .price__container-slider-slide .price-footer:before {
   border-right: 10px solid $green;
@@ -297,7 +301,6 @@
   margin-bottom: 20px;
 }
 .price__container-slider-slide .price-footer {
-  background-color: #69a6df;
   padding: 20px;
   -webkit-flex-basis: 90%;
       -ms-flex-preferred-size: 90%;
@@ -317,6 +320,7 @@
   -webkit-border-radius: 10px 10px 10px 0;
           border-radius: 10px 10px 10px 0;
   position: relative;
+  background: $green;
 }
 .price__container-slider-slide .price-footer span {
   font-family: $Bold;
@@ -331,8 +335,6 @@
   left: -15px;
   bottom: 0;
   border: 10px solid transparent;
-  border-right: 10px solid #69a6df;
-  border-bottom: 10px solid #69a6df;
 }
 @media (max-width: 991px) {
   .price {
