--- a/src/css/blocks/index/_price.css
+++ b/src/css/blocks/index/_price.css
@@ -86,6 +86,21 @@
   border-right: 10px solid #69a6df;
   border-bottom: 10px solid #69a6df;
 }
+.price__container-slider .swiper-slide:nth-child(1) .price__container-slider-slide .price-content-subtitle:nth-child(4) {
+  display: none;
+}
+.price__container-slider .swiper-slide:nth-child(1) .price__container-slider-slide .price-content-saleprice:nth-child(5) {
+  display: none;
+}
+.price__container-slider .swiper-slide:nth-child(2) .price__container-slider-slide .price-content-price:after {
+  display: none;
+}
+.price__container-slider .swiper-slide:nth-child(2) .price__container-slider-slide .price-content-subtitle:nth-child(4) {
+  display: none;
+}
+.price__container-slider .swiper-slide:nth-child(2) .price__container-slider-slide .price-content-saleprice:nth-child(5) {
+  display: none;
+}
 .price__container-slider .swiper-slide:nth-child(4) .price__container-slider-slide .price-footer:before {
   border-right: 10px solid $green;
   border-bottom: 10px solid $green;
@@ -137,23 +152,49 @@
   font-size: 0.825rem;
 }
 .price__container-slider-slide .price-content-price {
-  color: $text;
+  color: #7a7a7a;
   margin-bottom: 20px;
   font-family: $Bold;
   line-height: 24px;
+  display: inline-block;
+  position: relative;
   font-size: 1.5rem;
 }
 .price__container-slider-slide .price-content-price span {
-  margin-left: 4px;
+  margin-left: 5px;
+}
+.price__container-slider-slide .price-content-price:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  right: 0;
+  top: -webkit-calc(50% - 1.5px);
+  top: calc(50% - 1.5px);
+  background-color: #c94646;
+  -webkit-transform: rotate(5deg);
+      -ms-transform: rotate(5deg);
+          transform: rotate(5deg);
+}
+.price__container-slider-slide .price-content-saleprice {
+  color: $green;
+  font-family: $Black;
+  line-height: 24px;
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+}
+.price__container-slider-slide .price-content-saleprice .salePriceOne {
+  margin-right: 5px;
 }
 .price__container-slider-slide .price-content-total {
-  color: #313131;
+  color: #69a6df;
   font-family: $Black;
   line-height: 24px;
   font-size: 1.5rem;
 }
 .price__container-slider-slide .price-content-total .sale {
-  margin-right: 4px;
+  margin-right: 5px;
 }
 .price__container-slider-slide .price-content-button {
   background: -webkit-gradient(linear, left top, left bottom, from(#fdc128), to(#fc7b32));
