--- a/src/pug/blocks/index/price.pug
+++ b/src/pug/blocks/index/price.pug
@@ -17,11 +17,15 @@
 									.price-content-title 1 день
 									.price-content-subtitle Цена за 1 день
 									.price-content-price 700
-										span руб.
-									.price-content-subtitle Общая сумма
+										span руб
+									.price-content-subtitle Цена за 1 день со скидкой
+									.price-content-saleprice
+										span.salePriceOne 665
+										span руб
+									.price-content-subtitle Общая сумма со скидкой
 									.price-content-total
 										span.sale 630
-										span руб.
+										span руб
 									.price-content-button
 										span Хочу сейчас
 									.price-content-saletext
@@ -29,7 +33,7 @@
 										span скидка
 									.price-content-sale
 										span.salePrice 70
-											div руб.
+											div руб
 										span экономия
 								.price-footer
 									span Попробуйте сами
@@ -40,11 +44,15 @@
 									.price-content-title 7 дней
 									.price-content-subtitle Цена за 1 день
 									.price-content-price 700
-										span руб.
-									.price-content-subtitle Общая сумма
+										span руб
+									.price-content-subtitle Цена за 1 день со скидкой
+									.price-content-saleprice
+										span.salePriceOne 700
+										span руб
+									.price-content-subtitle Общая сумма со скидкой
 									.price-content-total
 										span.sale 4900
-										span руб.
+										span руб
 									.price-content-button
 										span Хочу сейчас
 						.swiper-slide
@@ -53,11 +61,15 @@
 									.price-content-title 14 дней
 									.price-content-subtitle Цена за 1 день
 									.price-content-price 700
-										span руб.
-									.price-content-subtitle Общая сумма
+										span руб
+									.price-content-subtitle Цена за 1 день со скидкой
+									.price-content-saleprice
+										span.salePriceOne 665
+										span руб
+									.price-content-subtitle Общая сумма со скидкой
 									.price-content-total
 										span.sale 9310
-										span руб.
+										span руб
 									.price-content-button
 										span Хочу сейчас
 									.price-content-saletext
@@ -65,7 +77,7 @@
 										span скидка
 									.price-content-sale
 										span.salePrice 980
-											div руб.
+											div руб
 										span экономия
 						.swiper-slide
 							.price__container-slider-slide
@@ -73,11 +85,15 @@
 									.price-content-title 28 дней
 									.price-content-subtitle Цена за 1 день
 									.price-content-price 700
-										span руб.
-									.price-content-subtitle Общая сумма
+										span руб
+									.price-content-subtitle Цена за 1 день со скидкой
+									.price-content-saleprice
+										span.salePriceOne 665
+										span руб
+									.price-content-subtitle Общая сумма со скидкой
 									.price-content-total
 										span.sale 17460
-										span руб.
+										span руб
 									.price-content-button
 										span Хочу сейчас
 									.price-content-saletext
@@ -85,7 +101,7 @@
 										span скидка
 									.price-content-sale
 										span.salePrice 1960
-											div руб.
+											div руб
 										span экономия
 								.price-footer
 									span Лучший выбор
